updating readme to fix images

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </article>
     </section>
 
-
+    <!-- footer with social media logos -->
     <footer class="contact" id="contact">
         <article class="box1">
             <h3>Contact Information</h3>
